# Games_Project

./: CMakeLists.txt  DonkeyPlayer.cpp  DonkeyPlayer.h  ElephantPlayer.cpp  ElephantPlayer.h  GameManager.cpp  GameManager.h  HumanPlayer.cpp  HumanPlayer.h  MonkeyPlayer.cpp  MonkeyPlayer.h  Player.cpp  Player.h  README.md  main.cpp
